infrastructure/openshift/cv-CI.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: CI
  name: mydata-cv-ci
spec:
  replicas: 1
  selector:
    app: CI
    deploymentconfig: mydata-cv-ci
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: CI
        deploymentconfig: mydata-cv-ci
    spec:
      containers:
        - env:
          - name: PORT
            value: '4000'
          - name: APM_SERVER
            value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io:443'
          - name: APM_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm
                key: token
          - name: APP_NAME
            value: mydata-cv api
          - name: NODE_ENV
            value: test
          - name: OPERATOR_URL
            value: 'http://mydata-operator-ci.my-data.svc:3000'
          - name: POSTGRES_USER
            value: postgresuser
          - name: POSTGRES_PASSWORD
            value: postgrespassword
          - name: POSTGRES_DB
            value: cv
          - name: DATABASE_URL
            value: postgres://postgresuser:postgrespassword@postgresql-cv-ci.my-data.svc:5432/cv
          - name: REDIS
            value: 'redis://:fubar@redis-ci.my-data.svc:6379/'
          - name: CLIENT_ID
            value: https://mydata-cv-ci.dev.services.jtech.se
          - name: NO_UPDATE_NOTIFIER
            value: 'true'
          image: cv:latest
          imagePullPolicy: Always
          name: mydata-cv-ci
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - mydata-cv-ci
        from:
          kind: ImageStreamTag
          name: 'cv:latest'
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: CI
  name: mydata-cv-ci
spec:
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: CI
    deploymentconfig: mydata-cv-ci
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: CI
  name: mydata-cv-ci
spec:
  host: mydata-cv-ci.dev.services.jtech.se
  port:
    targetPort: http
  to:
    kind: Service
    name: mydata-cv-ci
    weight: 100
  wildcardPolicy: None
  tls:
    valueFrom:
      secretKeyRef:
        key: jtech.se.crt
        name: tls
    termination: edge
