infrastructure/openshift/operator-TEST.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: TEST
  name: mydata-operator-test
spec:
  replicas: 1
  selector:
    app: TEST
    deploymentconfig: mydata-operator-test
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: TEST
        deploymentconfig: mydata-operator-test
    spec:
      containers:
        - env:
          - name: PORT
            value: '3000'
          - name: PGHOST
            value: postgresql-operator-test.my-data.svc
          - name: PGPORT
            value: '5432'
          - name: PGUSER
            value: postgresuser
          - name: PGPASSWORD
            value: postgrespassword
          - name: PGDATABASE
            value: mydata
          - name: DATABASE_URL
            value: postgres://postgresuser:postgrespassword@postgresql-operator-test.my-data.svc:5432/mydata
          - name: REDIS
            value: 'redis://:fubar@redis-test.my-data.svc:6379/'
          - name: APP_NAME
            value: mydata-operator
          - name: APM_SERVER
            value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io'
          - name: APM_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm
                key: token
          image: jobtechswe/mydata-operator:test
          imagePullPolicy: Always
          name: mydata-operator-test
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - mydata-operator-test
        from:
          kind: ImageStreamTag
          name: 'operator:test'
      
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: TEST
  name: mydata-operator-test
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: TEST
    deploymentconfig: mydata-operator-test
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: TEST
  name: mydata-operator-test
spec:
  host: mydata-operator-test.dev.services.jtech.se
  port:
    targetPort: http
  to:
    kind: Service
    name: mydata-operator-test
    weight: 100
  wildcardPolicy: None
  tls:
    valueFrom:
      secretKeyRef:
        key: jtech.se.crt
        name: tls
    termination: edge
